--- a/custom.css
+++ b/custom.css
@@ -9,3 +9,17 @@ h2 {
 p {
   margin-bottom: 1.5rem;
 }
+
+
+/* -- Code chunk */
+.cell-code {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+
+/* -- Code chunk output */
+.cell-output {
+  background-color: unset;
+  border-color: #bf906c;
+}
