--- a/custom.scss
+++ b/custom.scss
@@ -3,12 +3,13 @@
 /*-- scss:defaults --*/
 
 // navigation color
-$navbar-bg: #726d67;
+$navbar-bg: #cca37f;
+$navbar-fg: #2d3037;
 
 // base document colors
 $body-bg: #2d3037;
 $body-color: white;
-$link-color: #bf906c;
+$link-color: #cca37f;
 
 // base font
 $font-family-sans-serif: "Quicksand";
